# CameraSDK

./: CMakeLists.txt  Readme.md
include/: Camera.h
include/MVS/: MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h
src/: Camera.cpp  main.cpp
